<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>cn.lampup</groupId>
	<artifactId>electron</artifactId>
	<version>${revision}</version>
	<packaging>pom</packaging>
	<modules>
		<module>electron-rpc</module>
		<module>electron-register</module>
		<module>electron-console</module>
		<module>electron-client</module>
		<module>electron-base-common</module>
		<module>electron-common</module>
		<module>electron-core</module>
	</modules>

	<licenses>
		<license>
			<name>MulanPubL-2.0</name>
			<url>http://license.coscl.org.cn/MulanPubL-2.0</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<properties>
		<!-- Test libs -->
		<!-- Build args -->
		<argline>-server -Xms256m -Xmx512m -Dfile.encoding=UTF-8
			-Djava.net.preferIPv4Stack=true -XX:MetaspaceSize=64m
			-XX:MaxMetaspaceSize=128m
		</argline>
		<jetcd-core.version>0.0.2</jetcd-core.version>
		<jetcd.vision>0.5.4</jetcd.vision>
		<consul.vision>1.4.5</consul.vision>
		<eureka.vision>1.10.7</eureka.vision>
		<lombok.version>1.18.28</lombok.version>
		<revision>0.0.1-SNAPSHOT</revision>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>electron</groupId>
				<artifactId>electron-base-common</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>electron</groupId>
				<artifactId>electron-common</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>electron</groupId>
				<artifactId>electron-rpc</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>electron</groupId>
				<artifactId>electron-register</artifactId>
				<version>${revision}</version>
			</dependency>
			<!-- register -->

			<dependency>
				<groupId>io.etcd</groupId>
				<artifactId>jetcd-core</artifactId>
				<version>${jetcd.vision}</version>
			</dependency>
			<dependency>
				<groupId>com.ecwid.consul</groupId>
				<artifactId>consul-api</artifactId>
				<version>${consul.vision}</version>
				<exclusions>
					<exclusion>
						<artifactId>servlet-api</artifactId>
						<groupId>javax.servlet</groupId>
					</exclusion>
				</exclusions>
				<optional>true</optional>
			</dependency>
			<dependency>
				<groupId>com.netflix.eureka</groupId>
				<artifactId>eureka-client</artifactId>
				<version>${eureka.vision}</version>
			</dependency>

			<dependency>
				<groupId>io.github.githublaohu</groupId>
				<artifactId>logback-dependent</artifactId>
				<version>0.0.10</version>
				<type>pom</type>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<profiles>
		<profile>
			<id>javadoc-lint</id>
			<activation>
				<jdk>[1.8,)</jdk>
			</activation>
			<properties>
				<doclint>none</doclint>
			</properties>
		</profile>
		<profile>
			<id>release</id>
			<properties>
				<log4j2_version>2.11.1</log4j2_version>
			</properties>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-source-plugin</artifactId>
						<version>${maven_source_version}</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<executions>
							<execution>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

	</profiles>

	<build>
		<finalName>${project.name}</finalName>
		<resources>
			<resource>
				<directory>src/main/java</directory>
				<includes>
					<include>**/*.properties</include>
					<include>**/*.xml</include>
				</includes>
				<filtering>true</filtering>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<includes>
					<include>**</include>
				</includes>
				<filtering>true</filtering>
			</resource>
		</resources>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.7.0</version>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
						<encoding>UTF-8</encoding>
						<testIncludes>
							<testInclude>none</testInclude>
						</testIncludes>
						<annotationProcessorPaths>
							<path>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
								<version>${lombok.version}</version>
							</path>
						</annotationProcessorPaths>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.1.0</version>
					<configuration>
						<archive>
							<manifest>
								<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
								<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
							</manifest>
						</archive>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jdeps-plugin</artifactId>
					<version>3.0.0</version>
					<executions>
						<execution>
							<goals>
								<goal>jdkinternals</goal>
								<goal>test-jdkinternals</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.0.1</version>
					<configuration>
						<attach>true</attach>
					</configuration>
					<executions>
						<execution>
							<id>attach-sources</id>
							<goals>
								<goal>jar-no-fork</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.21.0</version>
					<configuration>
						<argLine>-Xmx512m -XX:PermSize=128m -XX:MaxPermSize=128m</argLine>
						<testFailureIgnore>true</testFailureIgnore>
						<includes>
							<include>**/*Test*.java</include>
						</includes>
						<excludes />
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<version>${spring-boot.version}</version>
					<configuration>
						<executable>true</executable>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<!--upload source code -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<configuration>
					<attach>true</attach>
				</configuration>
				<executions>
					<execution>
						<phase>compile</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>